--- a/html-css-js-basico/html/index.html
+++ b/html-css-js-basico/html/index.html
@@ -14,18 +14,26 @@
         </div>
         <div class="box_container">
             <ul class="alternating-list">
+
+                <!--FAQ-ITEM PERGUNTA 001-->
+
                 <li class="faq-item">O que são tags em HTML?</li>
                 <div class="answer">
                     <ul>
                         <li>Tags em HTML são elementos usados para definir e estruturar o conteúdo de uma página da web. As tags são compostas por um nome e podem ter atributos que fornecem informações adicionais sobre o elemento. O conteúdo que está entre as tags é o que aparece na página da web.</li>
-                        <p>Exemplos de tags em HTML:</p>
+                        <h3>Exemplos de tags em HTML:</h3>
                         <li><code>&lt;h1&gt;</code>: define um cabeçalho de nível 1.
                             - <code>&lt;img src="imagem.jpg" alt="descrição"&gt;</code>: exibe uma imagem na página da web. O atributo `src` especifica o caminho da imagem e o atributo `alt` fornece uma descrição alternativa para a imagem em caso de falha de carregamento.</li>
                     </ul>
                 </div>
+
+                <!--FAQ-ITEM PERGUNTA 002-->
+
                 <li class="faq-item">O que são atributos em HTML? </li>
                 <div class="answer">
-                    <p>Os atributos das tags em HTML fornecem informações adicionais sobre o elemento. Eles são usados para definir propriedades, características e comportamentos dos elementos. Os atributos são adicionados às tags usando a sintaxe <code>nome_do_atributo="valor_do_atributo".</code></p>
+                    <p>
+                        Os atributos das tags em HTML fornecem informações adicionais sobre o elemento. Eles são usados para definir propriedades, características e comportamentos dos elementos. Os atributos são adicionados às tags usando a sintaxe <code>nome_do_atributo="valor_do_atributo".</code></p>
+
                     <p>Exemplos de atributos em HTML:</p>
                     <ul>
                         <li><code>href </code>- usado em uma tag <code>a</code> para especificar o URL do link.</li>
@@ -37,6 +45,33 @@
                         <li><code>
                             &lt;p class="destaque">Este texto está em destaque. /p&gt;
                         </code>: define a classe CSS destaque para o parágrafo.</li>
+                    </ul>
+                </div>
+
+                <!--FAQ-ITEM PERGUNTA 003-->
+
+                <li class="faq-item">O que são meta tags em HTML? </li>
+                <div class="answer">
+                    <p>Meta tags são elementos HTML que fornecem informações adicionais sobre uma página da web. Elas não são visíveis na página da web, mas são usadas pelos mecanismos de pesquisa e pelos navegadores para entender o conteúdo e o propósito da página. As meta tags são adicionadas à seção <code>head</code> do documento HTML.</p>
+                    <h3>Exemplos de meta tags em HTML:</h3>
+                    <ul>
+                        <li> <code>&lt;meta name="description" content="Uma breve descrição da página."&gt;</code>: fornece uma descrição da página que aparece nos resultados da pesquisa.</li>
+                        <li><code>&lt;meta name="keywords" content="palavras-chave, separadas, por, vírgulas"&gt;</code>: fornece uma lista de palavras-chave que ajudam os mecanismos de pesquisa a entender o conteúdo da página.</li>
+                        <li><code>&lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;</code>: especifica como a página deve ser exibida em dispositivos móveis.</li>
+                    </ul>
+                </div>
+                <li class="faq-item">O que são títulos e parágrafos em HTML?</li>
+                <div class="answer">
+                    <p>Os títulos e parágrafos são elementos básicos em HTML para estruturar o conteúdo de uma página da web.</p>
+                    <h3>Títulos</h3>
+                    <p>Os títulos em HTML são usados para definir os cabeçalhos da página. Há seis níveis de títulos, onde <code>&lt;h1&gt;</code> é o maior e <code>&lt;h6&gt; </code>é o menor. A sintaxe é <code>&lt;h1Texto do Título h1&gt;</code>.</p>
+                    <h3>Exemplo:</h3>
+                    <ul>
+                        <code>
+                            <li>&lt h1> Título de Nível &gt;/h1></li>
+                            <li>&lt h2>Título de Nível 2&gt;/h2></li>
+                            <li>&lt h3>Título de Nível 3&gt;/h3></li>
+                        </code>
                     </ul>
                 </div>
             </ul>
