--- a/html-css-js-basico/html/index.html
+++ b/html-css-js-basico/html/index.html
@@ -67,12 +67,18 @@
                     <p>Os títulos em HTML são usados para definir os cabeçalhos da página. Há seis níveis de títulos, onde <code>&lt;h1&gt;</code> é o maior e <code>&lt;h6&gt; </code>é o menor. A sintaxe é <code>&lt;h1Texto do Título h1&gt;</code>.</p>
                     <h3>Exemplo:</h3>
                     <ul>
-                        <code>
-                            <li>&lt h1> Título de Nível &gt;/h1></li>
-                            <li>&lt h2>Título de Nível 2&gt;/h2></li>
-                            <li>&lt h3>Título de Nível 3&gt;/h3></li>
-                        </code>
+                          <code>
+                              <li>&lt; h1> Título de Nível &gt;/h1></li>
+                          </code>
+                            <code>
+                                <li>&lt; h2>Título de Nível 2&gt;/h2></li>
+                            </code>
+                            <code>
+                                <li>&lt; h3>Título de Nível 3&gt;/h3></li>
+                            </code>
                     </ul>
+                    <h3>Parágrafos</h3>
+                    <p>Os parágrafos em HTML são usados para definir blocos de texto. Eles são criados usando a tag <p>. A sintaxe é &lt;p>Texto do Parágrafo &gt;/p>.</p>
                 </div>
             </ul>
         </div>
