--- a/html-css-js-basico/html/index.html
+++ b/html-css-js-basico/html/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML báscio</title>
     <link rel="stylesheet" href="./src/css/style.css" type="text/css">
 </head>
+
 <body>
     <header class="background_header"></header>
     <main class="container">
@@ -20,10 +22,14 @@
                 <li class="faq-item">O que são tags em HTML?</li>
                 <div class="answer">
                     <ul>
-                        <li>Tags em HTML são elementos usados para definir e estruturar o conteúdo de uma página da web. As tags são compostas por um nome e podem ter atributos que fornecem informações adicionais sobre o elemento. O conteúdo que está entre as tags é o que aparece na página da web.</li>
+                        <li>Tags em HTML são elementos usados para definir e estruturar o conteúdo de uma página da web.
+                            As tags são compostas por um nome e podem ter atributos que fornecem informações adicionais
+                            sobre o elemento. O conteúdo que está entre as tags é o que aparece na página da web.</li>
                         <h3>Exemplos de tags em HTML:</h3>
                         <li><code>&lt;h1&gt;</code>: define um cabeçalho de nível 1.
-                            - <code>&lt;img src="imagem.jpg" alt="descrição"&gt;</code>: exibe uma imagem na página da web. O atributo `src` especifica o caminho da imagem e o atributo `alt` fornece uma descrição alternativa para a imagem em caso de falha de carregamento.</li>
+                            - <code>&lt;img src="imagem.jpg" alt="descrição"&gt;</code>: exibe uma imagem na página da
+                            web. O atributo `src` especifica o caminho da imagem e o atributo `alt` fornece uma
+                            descrição alternativa para a imagem em caso de falha de carregamento.</li>
                     </ul>
                 </div>
 
@@ -32,13 +38,16 @@
                 <li class="faq-item">O que são atributos em HTML? </li>
                 <div class="answer">
                     <p>
-                        Os atributos das tags em HTML fornecem informações adicionais sobre o elemento. Eles são usados para definir propriedades, características e comportamentos dos elementos. Os atributos são adicionados às tags usando a sintaxe <code>nome_do_atributo="valor_do_atributo".</code></p>
+                        Os atributos das tags em HTML fornecem informações adicionais sobre o elemento. Eles são usados
+                        para definir propriedades, características e comportamentos dos elementos. Os atributos são
+                        adicionados às tags usando a sintaxe <code>nome_do_atributo="valor_do_atributo".</code></p>
 
                     <p>Exemplos de atributos em HTML:</p>
                     <ul>
                         <li><code>href </code>- usado em uma tag <code>a</code> para especificar o URL do link.</li>
 
-                        <li><code>&lt;a href="<https://www.google.com/>">Google a&gt;:</code> cria um link para o Google.</li>
+                        <li><code>&lt;a href="<https://www.google.com/>">Google a&gt;:</code> cria um link para o
+                            Google.</li>
 
                         <li><code>class</code> - usado para definir uma classe CSS para um elemento.</li>
 
@@ -52,37 +61,91 @@
 
                 <li class="faq-item">O que são meta tags em HTML? </li>
                 <div class="answer">
-                    <p>Meta tags são elementos HTML que fornecem informações adicionais sobre uma página da web. Elas não são visíveis na página da web, mas são usadas pelos mecanismos de pesquisa e pelos navegadores para entender o conteúdo e o propósito da página. As meta tags são adicionadas à seção <code>head</code> do documento HTML.</p>
+                    <p>Meta tags são elementos HTML que fornecem informações adicionais sobre uma página da web. Elas
+                        não são visíveis na página da web, mas são usadas pelos mecanismos de pesquisa e pelos
+                        navegadores para entender o conteúdo e o propósito da página. As meta tags são adicionadas à
+                        seção <code>head</code> do documento HTML.</p>
                     <h3>Exemplos de meta tags em HTML:</h3>
                     <ul>
-                        <li> <code>&lt;meta name="description" content="Uma breve descrição da página."&gt;</code>: fornece uma descrição da página que aparece nos resultados da pesquisa.</li>
-                        <li><code>&lt;meta name="keywords" content="palavras-chave, separadas, por, vírgulas"&gt;</code>: fornece uma lista de palavras-chave que ajudam os mecanismos de pesquisa a entender o conteúdo da página.</li>
-                        <li><code>&lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;</code>: especifica como a página deve ser exibida em dispositivos móveis.</li>
+                        <li> <code>&lt;meta name="description" content="Uma breve descrição da página."&gt;</code>:
+                            fornece uma descrição da página que aparece nos resultados da pesquisa.</li>
+                        <li><code>&lt;meta name="keywords" content="palavras-chave, separadas, por, vírgulas"&gt;</code>:
+                            fornece uma lista de palavras-chave que ajudam os mecanismos de pesquisa a entender o
+                            conteúdo da página.</li>
+                        <li><code>&lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;</code>:
+                            especifica como a página deve ser exibida em dispositivos móveis.</li>
                     </ul>
                 </div>
+
+                <!--FAQ-ITEM PERGUNTA 004-->
+
                 <li class="faq-item">O que são títulos e parágrafos em HTML?</li>
                 <div class="answer">
-                    <p>Os títulos e parágrafos são elementos básicos em HTML para estruturar o conteúdo de uma página da web.</p>
+                    <p>Os títulos e parágrafos são elementos básicos em HTML para estruturar o conteúdo de uma página da
+                        web.</p>
                     <h3>Títulos</h3>
-                    <p>Os títulos em HTML são usados para definir os cabeçalhos da página. Há seis níveis de títulos, onde <code>&lt;h1&gt;</code> é o maior e <code>&lt;h6&gt; </code>é o menor. A sintaxe é <code>&lt;h1Texto do Título h1&gt;</code>.</p>
+                    <p>Os títulos em HTML são usados para definir os cabeçalhos da página. Há seis níveis de títulos,
+                        onde <code>&lt;h1&gt;</code> é o maior e <code>&lt;h6&gt; </code>é o menor. A sintaxe é
+                        <code>&lt;h1Texto do Título h1&gt;</code>.</p>
                     <h3>Exemplo:</h3>
                     <ul>
-                          <code>
+                        <code>
                               <li>&lt; h1> Título de Nível &gt;/h1></li>
                           </code>
-                            <code>
+                        <code>
                                 <li>&lt; h2>Título de Nível 2&gt;/h2></li>
                             </code>
-                            <code>
+                        <code>
                                 <li>&lt; h3>Título de Nível 3&gt;/h3></li>
                             </code>
                     </ul>
                     <h3>Parágrafos</h3>
-                    <p>Os parágrafos em HTML são usados para definir blocos de texto. Eles são criados usando a tag <p>. A sintaxe é &lt;p>Texto do Parágrafo &gt;/p>.</p>
+                    <p>Os parágrafos em HTML são usados para definir blocos de texto. Eles são criados usando a tag
+                    <p>. A sintaxe é &lt;p>Texto do Parágrafo &gt;/p>.</p>
+                </div>
+
+                <!--FAQ-ITEM PERGUNTA 005-->
+
+                <li class="faq-item">Exemplos de formatações de texto em HTML</li>
+                <div class="answer">
+                   <ul>
+                    <li>
+                        Negrito: a tag <code>&lt;b&gt;</code>é usada para definir texto em negrito. O texto entre as tags<code>&lt;b&gt;</code> e <code>&lt;/b&gt;</code> será exibido em negrito.
+                    </li>
+                    <p class="exemplos">Exemplo: <code><b>Texto em negrito</b></code></p>
+
+
+                    <li>
+                        Itálico: a tag <code>&lt;i&gt;</code> é usada para definir texto em itálico. O texto entre as tags <code>&lt;i&gt;</code> e <code>&lt;/i&gt;</code> será exibido em itálico.
+                    </li>
+                    <p class="exemplos">Exemplo: <code><i>Texto em itálico</i></code></p>
+
+
+                    <li>
+                        Sublinhado: a tag <code>&lt;u&gt;</code> é usada para definir texto sublinhado. O texto entre as tags <code>&lt;u&gt;</code> e <code>&lt;/u&gt;</code>  será exibido sublinhado.
+                    </li>
+                    <p class="exemplos">Exemplo: <code><u>Texto sublinhado</u></code></p>
+
+
+                    <li>Tachado: a tag <code>&lt;s&gt;</code> é usada para definir texto tachado. O texto entre as tags <code>&lt;s&gt;</code> e <code>&lt;/u&gt;</code> será exibido com uma linha no meio.</li>
+                   </ul>
+                   <p class="exemplos">Exemplo: <code><s>Texto tachado</s></code></p>
+
+                   <li>
+                    Citação: a tag <code>&lt;blockquote&gt;</code> é usada para definir uma citação. O texto entre as tags <code>&lt;blockquote&gt;</code> e <code>&lt;/blockquote&gt;</code>  será exibido em um bloco de citação.
+                   </li>
+                   <p class="exemplos">Exemplo: <code>
+                       <blockquote>Texto da citação</blockquote>
+                   </code></p>
+
+                   <h2>Embora essas tags ainda sejam suportadas em HTML, elas não são mais recomendadas para uso. Em vez disso, é recomendado o uso de tags semânticas como <code>&lt;strong&gt;</code>, que indica a importância do texto, em vez de especificar sua aparência. </h2>
+
+
                 </div>
             </ul>
         </div>
     </main>
     <script src="./src/js/index.js"></script>
 </body>
+
 </html>
