--- a/html-css-js-basico/html/index.html
+++ b/html-css-js-basico/html/index.html
@@ -174,6 +174,36 @@
 
 
                 </div>
+
+                <!--FAQ-ITEM PERGUNTA 007-->
+
+                <li class="faq-item">O que são Links em HTML e qual sua importância? </li>
+                <div class="answer">
+                    <p>
+                        Em HTML, um link é um elemento que permite que você crie hiperlinks, ou seja, conexões entre diferentes páginas da web, recursos ou seções dentro de uma página. O link mais comumente usado é o elemento <code>&lt;a&gt;</code> (âncora), que é abreviação de "anchor" em inglês.</p>
+
+                        <h3>A importância dos links em HTML é facilitar a navegação e a interação dos usuários na web. Aqui estão alguns pontos-chave sobre a importância dos links:</h3>
+                        <ul>
+                            <li>
+                                Navegação entre páginas: Os links permitem que os usuários cliquem em um texto ou elemento específico e sejam levados para outra página da web. Isso permite a criação de uma estrutura de navegação em um site, onde os usuários podem explorar diferentes seções, páginas e recursos com facilidade.
+                            </li>
+                            <li>
+                                Referências a recursos externos: Os links podem ser usados para se referir a recursos externos, como outros sites, imagens, arquivos de áudio, vídeos, documentos, entre outros. Os links permitem que esses recursos sejam acessados diretamente pelos usuários.
+                            </li>
+                            <li>
+                                Compartilhamento de informações: Os links são amplamente utilizados para compartilhar informações na web. Eles permitem que você compartilhe um URL específico com outras pessoas, para que elas possam acessar a mesma página ou recurso que você está visualizando.
+                            </li>
+                            <li>
+                                SEO (Otimização para mecanismos de busca): Os links têm um papel importante na otimização de um site para mecanismos de busca. Os mecanismos de busca analisam a estrutura de links de um site para determinar sua relevância e popularidade. Ter links relevantes e de qualidade pode ajudar a melhorar a classificação de um site nos resultados de pesquisa.
+                            </li>
+                            <li>
+                                Acessibilidade: Os links também são importantes para a acessibilidade na web. Eles permitem que usuários de tecnologias assistivas, como leitores de tela, naveguem facilmente entre diferentes seções de uma página ou acessem recursos externos.
+                            </li>
+                        </ul>
+                        <p>
+                            Em resumo, os links em HTML são essenciais para criar uma experiência de navegação eficiente e interativa na web. Eles permitem que os usuários acessem diferentes páginas e recursos, compartilhem informações e melhorem a usabilidade e a acessibilidade dos sites.
+                        </p>
+                </div>
             </ul>
         </div>
     </main>
